--- a/AryanITC.Web/Areas/AdminPanel/Views/User/EditUser.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/User/EditUser.cshtml
@@ -64,7 +64,7 @@
                             <div class="col-12 col-md-6 mb-2">
                                 <div class="form-group">
                                     <label asp-for="Password"></label>
-                                    <input type="password" class="form-control" asp-for="Password">
+                                    <input type="text" class="form-control" asp-for="Password">
                                     <span asp-validation-for="Password"></span>
                                 </div>
                             </div>
