--- a/AryanITC.Web/Areas/AdminPanel/Views/User/CreateUser.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/User/CreateUser.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Identity
 @model AryanITC.Domain.ViewModels.ManagementUser.CreateUserViewModel
 @{
-    ViewData["Title"] = "CreateUser";
+    ViewData["Title"] = "اضافه کردن کاربر";
     List<RoleViewModel> roles = ViewData["Roles"] as List<RoleViewModel>;
 }
 
