--- a/AryanITC.Web/Areas/AdminPanel/Views/User/Index.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/User/Index.cshtml
@@ -3,7 +3,7 @@
 @model AryanITC.Domain.ViewModels.ManagementUser.FilterUserViewModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "لیست کاربران";
 }
 
 @section AdminBreadCrumb
