--- a/AryanITC.Web/Areas/AdminPanel/Views/AboutUs/CreateAboutUs.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/AboutUs/CreateAboutUs.cshtml
@@ -88,13 +88,13 @@
                                 </div>
                             
                               
-                                <div class="row ">
+                            
                                 <div class="col-12 ">
                                     <div class="form-group">
                                         <input type="submit" class="btn btn-success btn-raised btn-round waves-effect" id="filterServiceBtn" value="افزودن" />
                                     </div>
                                 </div>
-                            </div></div>
+                            </div> 
                         </form>
                     @*}*@
 
