--- a/AryanITC.Web/wwwroot/css/style.css
+++ b/AryanITC.Web/wwwroot/css/style.css
@@ -237,8 +237,8 @@ p{
 }
 
 .top_cont_inner {
-	background: url(../img/white_pad.png) no-repeat left bottom;
-	 
+	background:  no-repeat left bottom;
+ 
 }
 
 .top_content {
