--- a/AryanITC.Web/Areas/AdminPanel/Views/SiteSetting/Index.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/SiteSetting/Index.cshtml
@@ -16,14 +16,21 @@
     @if (!string.IsNullOrEmpty(ViewBag.ErrorText))
     {
         <div class="alert alert-danger">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
             <p>@ViewBag.ErrorText</p>
         </div>
     }
     
     @if (!string.IsNullOrEmpty(ViewBag.SuccessText))
     {
-        <div class="alert alert-success">
+        <div class="alert alert-info">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
             <p>@ViewBag.SuccessText</p>
+
         </div>
     }
 
