Filter & Create Service

--- a/AryanITC.Web/Areas/AdminPanel/Views/Shared/_RightSideBar.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/Shared/_RightSideBar.cshtml
@@ -93,7 +93,27 @@
             </li>
             
             
-            
+            <li>
+                <a href="javascript:void(0);" class="menu-toggle">
+
+                    <span> سرویس ها </span>
+                </a>
+                <ul class="ml-menu">
+
+                    <li>
+                        <a asp-controller="Service" asp-action="Index">
+                            <span>   لیست سرویس    </span>
+                        </a>
+                    </li>
+                    
+                    <li>
+                        <a asp-controller="Service" asp-action="CreateService">
+                            <span> افزدون سرویس  </span>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+
             
             
             
