--- a/AryanITC.Web/Views/Shared/Components/MainSlider/MainSlider.cshtml
+++ b/AryanITC.Web/Views/Shared/Components/MainSlider/MainSlider.cshtml
@@ -12,7 +12,7 @@
 
                     @foreach (var item in Model)
                     {
-                        <img width="617" height="480" src="@(FilePath.AboutUsImage + item.AboutUsImage)" alt="">
+                        <img width="617" height="480" src="@(FilePath.AboutUsImage + item.AboutUsImage)" alt="آریان">
                     }
                 </div>
 
