--- a/AryanITC.Web/Areas/AdminPanel/Views/User/Index.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/User/Index.cshtml
@@ -35,7 +35,7 @@
                                     <input type="text" asp-for="FullName" class="form-control" />
                                 </div>
                                 <div class="form-group">
-                                    <label> شماره موبایل</label>
+                                    <label asp-for="MobileNumber"> شماره موبایل</label>
                                     <input type="text" asp-for="MobileNumber" class="form-control" />
                                 </div>
                             </div>
@@ -183,7 +183,7 @@
                                     {
                                         <li class="paginate_button page-item @((Model.PageId == i) ? "active" : "")">
 
-                                            <a  asp-action="Index" asp-route-pageId="@i"  PFormId="OurServiceForm" aria-controls="DataTables_Table_0" data-dt-idx="1" tabindex="0" class="page-link">@i</a>
+                                            <a asp-action="Index" asp-route-pageId="@i" PFormId="OurServiceForm" aria-controls="DataTables_Table_0" data-dt-idx="1" tabindex="0" class="page-link">@i</a>
                                         </li>
                                     }
                                 </ul>
