--- a/AryanITC.Web/Views/Shared/Components/Services/Services.cshtml
+++ b/AryanITC.Web/Views/Shared/Components/Services/Services.cshtml
@@ -20,7 +20,9 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="service_block">
-                        <div class="service_icon icon2  delay-03s animated wow zoomIn"> <span><i class="fa-comments"></i></span> </div>
+                        <div class="service_icon icon2
+                             
+                             delay-03s animated wow zoomIn"> <span style="background: red"><i class="fa-comments"></i></span> </div>
                         <h3 class="animated fadeInUp wow">Friendly Support</h3>
                         <p class="animated fadeInDown wow">Proin iaculis purus consequat sem cure digni. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
